--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
             <li>GrocerEZ List</li>
             <li>meal prep</li>
             <li>I'm in the mood food</li>
+            <li>I'm in the mood for concert food</li>
         </ul>
     </section>
+
 
     <footer>
         <p>&copy; 2023 My Grocery Store. All rights reserved.</p>
