--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <!-- Include Bootstrap CSS from CDN -->
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+
+<!-- Include jQuery from CDN -->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+
+<!-- Include Bootstrap JS from CDN -->
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+
     <title>My GrocerEZ</title>
 
 
@@ -28,8 +38,11 @@
             <li>meal prep</li>
             <li>I'm in the mood food</li>
             <li>I'm in the mood for concert food</li>
+            <button type="button" class="btn btn-primary">Primary Button</button>
+
         </ul>
     </section>
+    
 
 
     <footer>
