nick did task 1

--- a/index.html
+++ b/index.html
@@ -1,84 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <!-- Include Bootstrap CSS from CDN -->
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
 
-<!-- Include jQuery from CDN -->
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <body>
 
-<!-- Include Bootstrap JS from CDN -->
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <div class="search-container">
+        <input type="text" id="recipeInput" placeholder="Search for a recipe">
+        <button id="searchButton">Search</button>
 
-
-    <title>My GrocerEZ</title>
-
-
-<body>
-
-    <header>
-        <h1>My GrocerEZ</h1>
-    </header>
-
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Dropdown
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
-              </ul>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-            </li>
-          </ul>
-          <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
-          </form>
+        <div id="preferencesContainer">
+            <label>
+                <input type="checkbox" id="vegetarianCheckbox"> Vegetarian
+            </label>
+            <label>
+                <input type="checkbox" id="veganCheckbox"> Vegan
+            </label>
+            <label>
+                <input type="checkbox" id="glutenFreeCheckbox"> Gluten-Free
+            </label>
+            <!-- Add more checkboxes for other dietary preferences -->
         </div>
-      </div>
-    </nav>
-    <section>
-        <h2>Welcome to My GrocerEZ!</h2>
-        <p>Explore our wide range of recipes and meal prep ideas!.</p>
-        <h3>Featured Products</h3>
-        <ul>
-      
-            <button type="button" class="btn btn-primary">GrocerEZ List</button>
-            <button type="button" class="btn btn-primary">meal prep</button>
-            <button type="button" class="btn btn-primary">I'm in the mood food</button>
-            <button type="button" class="btn btn-primary">I'm in the mood for concert food</button>
-
-        </ul>
-    </section>
-    
 
 
-    <footer>
-        <p>&copy; 2023 My Grocery Store. All rights reserved.</p>
-    </footer>
-
-</body>
+    </div>
+    <script src="./script.js"></script>
+    </body>
 
 </html>
