--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
             <!-- Add more checkboxes for other dietary preferences -->
         </div>
 
+        <div id="recipe-list">
+
+        </div>
 
     </div>
     <script src="./script.js"></script>
