--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
 
         </div>
 
+        <div id="ingredientDetails"></div>
+
+
     </div>
     <script src="./script.js"></script>
     </body>
