customized ingredient list

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link rel="stylesheet" href="./styles.css">
+  <title>GrocerEZ</title>
 </head>
 
   <body>
@@ -30,6 +31,9 @@
         </div>
 
         <div id="ingredientDetails"></div>
+
+        <!-- div to display recipe details -->
+        <div id="recipe-details"></div> 
 
 
     </div>
