added JS and CSS files to assets folder

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./styles.css">
+  <link rel="stylesheet" href="./Assets/styles.css">
   <title>GrocerEZ</title>
 </head>
 
@@ -37,7 +37,7 @@
 
 
     </div>
-    <script src="./script.js"></script>
+    <script src="./Assets/script.js"></script>
     </body>
 
 </html>
