--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
         <!-- div to display recipe details -->
         <div id="recipe-details"></div> 
 
+        <div>
+            <button>➕ EZ List</button>
+        </div>
+
 
     </div>
     <script src="./Assets/script.js"></script>
