button for ingredients to add to list

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </div>
     
         <div class="add-to-list-btn">
-          <button>➕ EZ List</button>
+          <button id="easyButton">➕ EZ List</button>
         </div>
     
         <article id="recipe-list"></article>
