--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <script src="./Assets/script.js"></script> -->
 
     <nav>
-        <h1>GrocerEZ</h1>
+        <h1>GrocerEZ 🛒</h1>
         <!-- You can add other navigation links here -->
       </nav>
     
@@ -70,7 +70,7 @@
         </div>
     
         <div class="add-to-list-btn">
-          <button id="ezBtn" onclick="displaySL()">➕ EZ List</button>
+          <button id="ezBtn" onclick="displaySL()">➕ EZ List 🗒️</button>
         </div>
 
             <!-- ingredients fetched from API will be displayed in a shopping list here -->
