--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </div>
     
         <div class="add-to-list-btn">
-          <button id="ezBtn" onclick="displaySL()">➕ EZ List 🗒️</button>
+          <button id="ezBtn">➕ EZ List 🗒️</button>
         </div>
 
             <!-- ingredients fetched from API will be displayed in a shopping list here -->
