ez button fixxins

--- a/index.html
+++ b/index.html
@@ -10,40 +10,7 @@
 
   <body>
 
-    <!-- <div class="search-container">
-        <input type="text" id="recipeInput" placeholder="Search for a recipe">
-        <button id="searchButton">Search</button>
 
-        <div id="preferencesContainer">
-            <label>
-                <input type="checkbox" id="vegetarianCheckbox"> Vegetarian
-            </label>
-            <label>
-                <input type="checkbox" id="veganCheckbox"> Vegan
-            </label>
-            <label>
-                <input type="checkbox" id="glutenFreeCheckbox"> Gluten-Free
-            </label>
-           
-        </div>
-
-        <div id="recipe-list">
-
-        </div>
-    <div class="ing-container">  
-        <div id="ingredientDetails"></div>
-    </div>  
-
-        
-        <div id="recipe-details"></div> 
-
-        <div>
-            <button>➕ EZ List</button>
-        </div>
-
-
-    </div>
-    <script src="./Assets/script.js"></script> -->
 
     <nav>
         <h1>GrocerEZ 🛒</h1>
@@ -73,7 +40,10 @@
 
 
           <button id="easyButton">➕ EZ List</button>
+          <button id="showList">show EZ List</button>
+          <ul id="list">
 
+          </ul>
         </div>
 
             <!-- ingredients fetched from API will be displayed in a shopping list here -->
