--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <nav>
         <h1>GrocerEZ 🛒</h1>
         <!-- You can add other navigation links here -->
+				<!-- link for 'home' and 'my EZ Lists' -->
       </nav>
     
       <section class="search-container">
@@ -40,7 +41,7 @@
 
 
           <button id="easyButton">➕ EZ List</button>
-          <button id="showList">show EZ List</button>
+          <button id="showList">Show EZ List</button>
           <ul id="list">
 
           </ul>
