--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         <div class="add-to-list-btn">
 
 
-          <button id="easyButton">➕ EZ List</button>
-          <button id="showList">Show EZ List</button>
+          <button id="easyButton">➕ EZ List 🗒️</button>
+          <button id="showList">Show EZ List 🗒️</button>
           <ul id="list">
 
           </ul>
