added notification to JS and HTML

--- a/index.html
+++ b/index.html
@@ -39,9 +39,12 @@
     
         <div class="add-to-list-btn">
 
-
+				<div class="ez-div">
           <button id="easyButton">➕ EZ List 🗒️</button>
-          <button id="showList">Show EZ List 🗒️</button>
+					<p class="notification hide">Added to List ✔️</p>
+				</div>	
+          <button id="showList">Show EZ List 🗒️</button> 
+					
           <ul id="list">
 
           </ul>
