--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 				<div class="ez-div">
           <button id="easyButton">➕ EZ List 🗒️</button>
-					<p class="notification hide">Added to List ✔️</p>
+					<p class="notification hide">✔️ Added to EZ List</p>
 				</div>	
           <button id="showList">Show EZ List 🗒️</button> 
 					
