navbar in progress

--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
         <h1>GrocerEZ 🛒</h1>
         <!-- You can add other navigation links here -->
 				<!-- link for 'home' and 'my EZ Lists' -->
+
+        <ul>
+          <li><a href="#">Item 1</a></li>
+          <li><a href="#">Item 2</a></li>
+          <li><a href="#">Item 3</a></li>
+        </ul>
       </nav>
     
       <section class="search-container">
