--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
 				<!-- link for 'home' and 'my EZ Lists' -->
 
         <ul>
-          <li><a href="#">Item 1</a></li>
-          <li><a href="#">Item 2</a></li>
-          <li><a href="#">Item 3</a></li>
+          <li><a href="http://127.0.0.1:5501/index.html">Home</a></li>
+          <li><a href="#">My EZ List</a></li>
         </ul>
 
                 <div class="weather-info">
