--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </div>
     
       </section>
-      <script src="./weather.js"></script>
+      <script src="./Assets/weather.js"></script>
       <script src="./Assets/script.js"></script>
     </body>
 
