updated home link

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav>
         <h1>GrocerEZ 🛒</h1>
         <ul>
-          <li><a href="http://127.0.0.1:5501/index.html">Home</a></li>
+          <li><a href="https://kristin611.github.io/GrocerEZ/">Home</a></li>
           <li><a href="#showList">My EZ List</a></li>
         </ul>
 
